<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/chose_path_ll_way_to_travel"
        android:gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:id="@+id/chose_path_ll_way_to_travel_foot"
            android:onClick="onChangeWayToTravel">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icone_walk"
                android:id="@+id/chose_path_way_to_travel_foot"
                android:background="@android:color/transparent"
                android:layout_margin="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/text_color"
                android:text="@string/chose_path_way_to_travel_foot"
                android:id="@+id/chose_path_tv_way_to_travel_foot" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:id="@+id/chose_path_ll_way_to_travel_bike"
            android:onClick="onChangeWayToTravel">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icone_bike"
                android:id="@+id/chose_path_way_to_travel_bike"
                android:background="@android:color/transparent"
                android:layout_margin="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/text_color"
                android:text="@string/chose_path_way_to_travel_bike"
                android:id="@+id/chose_path_tv_way_to_travel_bike" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:id="@+id/chose_path_ll_way_to_travel_car"
            android:onClick="onChangeWayToTravel">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icone_drive"
                android:id="@+id/chose_path_way_to_travel_car"
                android:background="@android:color/transparent"
                android:layout_margin="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/text_color"
                android:text="@string/chose_path_way_to_travel_car"
                android:id="@+id/chose_path_tv_way_to_travel_car" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/chose_path_ll_way_to_travel"
        android:layout_above="@+id/chose_path_ll_validate"
        android:background="@color/text_color">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/path_selection">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/text_color_hover"
                android:text="@string/chose_path_start" />

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/chose_path_et_origin"
                    android:layout_toLeftOf="@+id/chose_path_ib_localise"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/text_size_normal"
                    android:text="@string/chose_path_user_position"
                    android:textColor="@color/text_color_hover"
                    android:hint="@string/chose_path_position_start"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:id="@+id/chose_path_ib_localise"
                    android:src="@drawable/icone_localisation"
                    android:onClick="onLocalise"
                    android:background="@android:color/transparent" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/path_selection">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/text_color_hover"
                android:text="@string/chose_path_destination" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chose_path_et_destination"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/text_color_hover"
                android:hint="@string/chose_path_position_destination"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/chose_path_ll_validate"
        android:background="@color/bg_color"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="onValidate">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/icone_validate"
            android:background="@android:color/transparent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:textColor="@color/text_color"
            android:text="@string/chose_path_validate"
            android:id="@+id/chose_path_tv_validate"
            />

    </LinearLayout>

</RelativeLayout>