<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

            <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ville_txt_entrer_ville"
                    android:text="@string/ville_txt_entrer_ville"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_small"/>

            <AutoCompleteTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ville_etxt_ville"
                    android:hint="@string/ville_etxt_ville_hint"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_normal"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:id="@+id/chose_city_ll_validate"
            android:onClick="onValidate">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icone_validate"
                android:id="@+id/chose_city_iv_validate"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ville_btn_validate"
                android:id="@+id/chose_city_tv_validate"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_normal"
                android:layout_margin="10dp"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>