<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/bg_color">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/splash_screen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_screen_title_txt"
                android:layout_marginTop="62dp"
                android:textColor="@color/text_color"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/text_size_title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_screen_subtitle_txt"
                android:id="@+id/splash_screen_subtitle"
                android:layout_below="@+id/splash_screen_title"
                android:textColor="@color/text_color"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/text_size_subtitle"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_centerVertical="true" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onSeeBorn">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icone_bike"/>

                <TextView
                    android:id="@+id/accueil_menu_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accueil_btn_menu_list"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/text_color"
                    android:layout_margin="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="onChoseCity">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icone_city" />

                <TextView
                    android:id="@+id/accueil_menu_ville"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accueil_btn_menu_ville"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/text_color"
                    android:layout_margin="10dp"/>

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
